assets/stylesheets/lobby.css
/* ... */
#col1 {
    height: 100%;
}
#col2 {
    overflow: auto;
}

.full-height {
    height: 100%;
}

.tab-window {
    height: 90%;
    border: 1px solid #d3d3d3;
    border-radius: 5px;
    overflow-y: auto;
    overflow-x: visible;
    padding: 5px;
}

.tab-window-full-bottom{
    height: 100%;
    border: 1px solid #d3d3d3;
    border-radius: 5px;
    overflow-y: auto;
    overflow-x: visible;
    padding: 5px;
}

.chat-window {
    height: 100%;
    display: block;
    /*max-height: 75%;*/
    border: 1px solid #d3d3d3;
    border-radius: 5px;
    overflow-y: auto;
    overflow-x: visible;
}

.chat-window ol li{
    padding-left: 1px;
    margin-bottom: 1px;
}

.chat-message-input {
    width: 100%;
    border: 2px solid #d3d3d3;
    border-radius: 5px;
}

.chat-list {
    padding: 5px;
    list-style: none;
    width: 100%;
    overflow: auto;
    word-wrap: break-word;
}

.other-chat {
    float: left;
    text-align: left;
    width: 100%;
}

.self-chat {
    color: purple;
    text-align: right;
    width: 100%;
}

#chat-list li {
    padding: 0.1rem;
    overflow: hidden;
    display: flex;
}

#current-players-table tbody tr td {
    /*box-sizing:border-box;*/
    border: transparent 2px solid;
    /*margin: 10px;*/
}

#spectators-table tbody tr td {
    /*box-sizing:border-box;*/
    border: transparent 2px solid;
    /*margin: 10px;*/
}

.lobby-table {
    border-radius: 5px;
    /*border: 1px solid #ddd;*/
    border-collapse: separate;
    border-spacing: 1px;
}

.dropdown-menu {
    padding-left: 10px;
    padding-right: 10px;
    min-width: 200px;
}

.navbar-text {
    padding-left: 10px;
}


/* TEXT */

.server-text {
    /*color: #2378ff;*/
    /*color: #ff6b6b;*/
    color: #7c7c7c;
    /*font-style: italic;*/
}

.server-text-teal{
    color: teal;
}

.spectator-chat{
    color: rgb(98, 98, 98);
}

.hidden-spectator-chat{
    /* color: rgb(98, 98, 98); */
    display: none;
}

.dark .spectator-chat{
    color: rgb(175, 175, 175);
}

.gameplay-text {
    /* color: rgb(255, 0, 0); */
    color: gray;
    font-style: italic;
}

.gameplay-text-red {
    /* color: rgb(255, 0, 0); */
    color: #bd362f;
    font-style: italic;
    font-weight: 700;
}
.dark .gameplay-text-red {
    color: #fc4141;
}

.gameplay-text-blue {
    /* color: rgb(255, 0, 0); */
    color: #0044cc;
    font-style: italic;
    font-weight: 700;
}
.dark .gameplay-text-blue {
    color: #0087d6;
}








/* This is Lady */
.special-text {
    color: rgb(208, 0, 255);
    font-style: italic;
    font-weight: bold;
}

.username-text {
    font-weight: bold;
}


/*GAME-ROOM AREA*/

.room-container {
    height: 100%;
    /*background-color: purple;*/
    position: relative;
    /*border: solid 1px #d3d3d3;*/
    /*border-radius: 5px;*/
}

.game-container {
    /*height: is already set in the container at 90%*/
    height: 90%;
    min-height: 90%;
    max-height: 90%;

    padding-left: 10px;
    padding-right: 10px;
    /*width: 75%;*/
}

#mainRoomBox {
    height: 100%;
    margin-top: 10px;
    width: 100%;
    /*resize: none;*/
    /*position: absolute;*/
    /*position: relative;	*/
}


/*GAME-ROOM ITEMS*/

.playerDiv {
    display: inline-block;
    position: absolute;
    /*Slightly bias toward the top because of the words underneath the picture/div
	hence 40% */
    transform: translate(-50%, 100%);
    text-align: center;
    box-sizing: border-box;
    max-width: 128px;
    max-height: 128px;
    /* border: 5px solid transparent; */
}

.leaderStar {
    z-index: 2;
    position: absolute;
    right: 0;
    /*bottom: 0;*/
    height: 30%;
    transform: translate(-10%, -140%);
}

.bullet {
    top: -60px;
    /*left: -200px;*/
    position: absolute;
    transform: translate(-50%, 50%);
    width: 50px;
    height: 50px;
}

.gunBefore {
    z-index: 2;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    visibility: hidden;
}

.gunAfter {
    z-index: 2;
    position: absolute;
    /* right: 0; */
    /* top: 33%; */
    /* width: 100%; */
}

.gun {
    pointer-events:none;
}

.role-p {
    padding: 0;
    background-color: #dddddd;
    border-radius: 5px;
}

.username-p {
    /*text-align: center;*/
    display: flex;
    justify-content: center;
}

.avatarImgInRoom {
    /*margin: 0 auto;*/
    object-fit: contain;
    /* width: auto; */
    /*height:auto;*/
    max-width: 100%;
    max-height: 100%;
    top: 0px;
    margin-left: 2px;
    
}


/* Highlighting of avatars/chat */

.highlight-avatar {
    background-color: #ffff00 !important;
    border-radius: 10px;
    /*padding-left: 10px;*/
    /*margin-left: -10px;*/
}

.selected-chat {
    /* background-color: rgb(255, 255, 0); */
}

.selected-avatar-1 {
    background-color: #8BE38B;
    border-radius: 5px;
}

.dark .selected-avatar-1 {
    background-color: #579157;
    border-radius: 5px;
}



.selected-avatar-2 {
    background-color: #d9544f81;
    border-radius: 5px;
}

.avatarOptionButtons {
    position: absolute;
    top: 0px;
    left:15%;
    display: block;
    z-index: 1000;
}

.playerDiv .avatarButton {
    border: 2px solid #d3d3d3;
    padding: 2px;
    border-radius: 25%;
    transform: translateX(-90%);
    /*position: absolute;*/
    display: none;
    /*display: block;*/
}

.playerDiv:hover .avatarButton {
    display: block;
    /*background-color: purple;*/
}


/* Center well */

well {
    height: 54px;
}

.game-buttons-div {
    text-align: center;
    /* padding: 15px; */
    padding-top: 3px;
    /* margin-top: 10px; */
    /* position: relative; */
    /* bottom: 0%; */
    /* transform: translateY(-100%); */
}

.game-buttons-div button {
    margin-left: 5px;
    margin-right: 5px;
}

.center-div {
    text-align: center;
}
/* ... */

